--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=TravelSathi
-server.port=9000
-spring.datasource.url=jdbc:mysql://localhost:3306/travelvibe
+server.port=8080
 
+spring.datasource.url=jdbc:mysql://mysql:3306/ecommerce
 spring.datasource.username=root
-spring.datasource.password=sirisha
+spring.datasource.password=root
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
